<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <RelativeLayout
            android:id="@+id/top_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/details_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="160dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder" />

            <LinearLayout
                android:id="@+id/details_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/details_poster"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/details_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="right"
                        android:padding="8dp"
                        android:text="@string/activity_detailed_movie_rating"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/details_votecount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/details_rating"
                        android:layout_gravity="right"
                        android:paddingLeft="8dp"
                        android:text="@string/activity_detailed_movie_vote_count"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/details_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="@string/activity_detailed_movie_release_date"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/details_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text=""
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/details_overview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top_block"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


    </RelativeLayout>

</ScrollView>